--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html , body {
 }
 
 .hero-section {
-    background-image: url("images/developer.png");
+    background-image: url("developer.png");
     min-height: 100vh;
     background-position: center;
     background-size: cover;
